# CamFindAI

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  fix_schema.py  pyproject.toml  replace_colors.py  start.sh  ui.md
alembic/: env.py
alembic/versions/: 4f8ab523dd5a_initial_schema.py  65750f9f6c0b_add_org_id_fk.py  7ba516f00aae_timezone_aware.py  9f1e675be36b_add_organization_and_extend_user.py  aab74a41ee9e_phase7_foundation.py  ff5815e68ab3_add_camera_source_fields.py
app/api/: main.py
app/api/routes/: alerts.py  analytics.py  auth.py  cameras.py  identities.py  settings_api.py  zones.py
app/api/websockets/: alerts_ws.py  feeds.py  status.py
app/cameras/: camera_manager.py
app/consumers/: matching_consumer.py  persistence_consumer.py  rules_engine.py
app/core/: config.py  kafka.py  security.py
app/models/: schema.py
app/pipeline/: detector.py  matcher.py  reid.py  tracker.py  video_ingest.py
app/schemas/: pydantic_models.py
app/workers/: multi_camera_worker.py
camfindai-ui/: index.html  package-lock.json  package.json
camfindai-ui/src/: App.tsx  index.css
camfindai-ui/src/api/: client.ts
camfindai-ui/src/components/: Layout.tsx
camfindai-ui/src/contexts/: AuthContext.tsx
camfindai-ui/src/hooks/: useWebSocket.ts
camfindai-ui/src/pages/: Alerts.tsx  CameraManagement.tsx  Identities.tsx  LiveView.tsx  LoginPage.tsx  RegisterPage.tsx  SetupWizard.tsx  (+1 more)
scripts/: add_admin.py  add_cameras.py  reset_db.py  run_phase1.py  run_phase2.py  run_phase3_camera_worker.py  seed_db.py
tests/: test_e2e.py  test_matcher.py
(+4 files in other folders)
