[project]
name = "camfindai-backend"
version = "0.1.0"
description = "CamFindAI - Multi-camera person re-identification and surveillance analytics system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.2",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg2-binary>=2.9.9",
    "confluent-kafka>=2.3.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.1",
    "faiss-cpu>=1.7.4",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "scipy>=1.11.3",
    "deep-sort-realtime>=1.3.2",
    "python-multipart>=0.0.6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
